--- a/readme.org
+++ b/readme.org
@@ -238,7 +238,7 @@ tag-dispatch 实现了基于分流规则（域名匹配）的分派，例如：
 
 指定从 =.nproxy/test.edn= 中读取测试配置。
 
-*** 【科学上网】vsub
+*** vsub
 
 V2rayN 格式的订阅管理工具。
 
@@ -262,7 +262,7 @@ V2rayN 格式的订阅管理工具。
 
 列出 =.nproxy/sub.txt= 中的所有 vmess 节点，使用者从中选择若干个节点（读取 edn，格式为数字或数字序列），生成出口配置保存到 =.nproxy/sub.edn= 。
 
-*** 【科学上网】dlc
+*** dlc
 
 社区维护的分流规则导入工具。
 
@@ -276,7 +276,7 @@ V2rayN 格式的订阅管理工具。
 
 有三种 tags：direct、proxy 和 block。
 
-** 科学上网最佳实践
+** 最佳实践
 
 按照 [[配置文件]] 中的示例添加 =.nproxy/config.edn= 。 =.nproxy/sub.edn= 和 =.nproxy/tags.edn= 由工具生成。
 
